--- a/Assignment-1-Style/Style.css
+++ b/Assignment-1-Style/Style.css
@@ -15,6 +15,11 @@
     font-size:32px;
     color:rgb(13, 19, 33);
 }
+.Head-Secondary{
+font-weight:700;
+font-size:24px;
+
+}
 
 /* Main */
 .main{
@@ -90,7 +95,55 @@ padding-top:26px;
     padding:80px 97px;
     margin-top:74px 152px 148px 88px;
     text-align:center;
+    background-color: rgba(13, 19, 33, 0.02);
+    
+}
+.card-section{
+   width: 946px;
+   height:1072px;
+   margin: 0 auto;
+}
+.card-details{
+    display: flex;
+    justify-content: space-between;   
+    padding: 48px;
+    margin: 32px;
+    width: 850px;
+    height: 240px;
+    border-radius:16px;
+}
+.card{
+    text-align: left;
+    padding: 48px 0 32px 0;
+}
+.local-btn{
+    width: 150px;
+    height: 48px;
+    font-weight: 600;
+    font-size: 20px;
+    border: 1px solid rgb(13, 19, 33);
+    padding:12px 20px;
+    margin-top:32px;
+}
+.img-1{
+    width:274.17px;
+    height:270px;
+    margin-left: 99.77px;
+    padding-top: 30px;
 }
 
-
+.card-2{
+    text-align:center;
+    padding: 48px 0 32px 0;
+}
+.img-2{
+    width:223.2px;
+    height:208.85px;
+    padding-top: 50px;
+}
+.img-3{
+    width:206.4px;
+    height:187.32px;
+    padding-top: 50px;
+}
 
