--- a/Assignment-1-Style/Style.css
+++ b/Assignment-1-Style/Style.css
@@ -111,6 +111,7 @@ padding-top:26px;
     width: 850px;
     height: 240px;
     border-radius:16px;
+    background: linear-gradient(90.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
 }
 .card{
     text-align: left;
@@ -146,4 +147,12 @@ padding-top:26px;
     height:187.32px;
     padding-top: 50px;
 }
-
+ /* Inspiration part */
+ #Inspiration{
+width:1140px;
+height: 777px;
+margin: 0 auto;
+ }
+.parent{
+    text-align: center;
+}
